--- a/Atdl4net/Resources/HumanReadableTypeNames.resx
+++ b/Atdl4net/Resources/HumanReadableTypeNames.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BooleanType" xml:space="preserve">
     <value>boolean value</value>
@@ -158,5 +158,8 @@
   </data>
   <data name="TimeType" xml:space="preserve">
     <value>time</value>
+  </data>
+  <data name="AddMandatoryFieldLabel" xml:space="preserve">
+    <value>* = Mandatory</value>
   </data>
 </root>
